<resources>
    <string name="app_name">Learning Countries App</string>
    <string name="country_list">Country List</string>
    <string name="details_country_name">Country Name</string>
    <string name="details_country_flag">Country Flag</string>
    <string name="details_country_details">Country Details</string>
    <string name="details_country_photo">Country Photo</string>
    <string name="compare">Compare 2 countries</string>
    <string name="open_in_maps">See location in Google Maps!</string>
    <string name="favourite_countries">Favorite Countries</string>
    <string name="content">Top 20 Country Flags</string>
    <string name="add_to_fav">Add to Favorites</string>
</resources>