<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#D6EAF8">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    <!-- Toolbar -->
    <TextView
        android:id="@+id/countryNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/details_country_name"/>

    <ImageView
        android:id="@+id/flagImageView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/details_country_flag"
        android:scaleType="fitCenter"/>

    <TextView
        android:id="@+id/countryDetailsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/details_country_details"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/countryPhotoImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/details_country_photo"/>

    <Button
        android:id="@+id/btn_open_in_maps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_in_maps"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"/>

</LinearLayout>
